@@ -1,3 +1,6 @@
+2003-11-27 TADA Tadashi <sho@spc.gr.jp>
+	* plugin/whatsnew-list.rb: support Config#base_url.
+
 2003-11-13 TADA Tadashi <sho@spc.gr.jp>
 	* release 1.5.6.
 
